<resources>
    <string name="app_name">DemoKevin</string>
    <string name="kk">Enter First Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in_to_your_account">Sign in to your\nAccount</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_phone_no_to_login_in">Enter your Phone number to log in</string>
    <string name="phone_number">Phone number</string>
    <string name="or_login_with">Or login with</string>
    <string name="app_logo">App Logo</string>
    <string name="banner_description">Banner</string>
</resources>